tests/golden/type_errors/for_in_typed_item_mismatch.cd
let xs: [number] = [1];
for x in xs {
  let y: string = x;
}
